--- a/eplugins/fanfiction_panels/plugin.xml
+++ b/eplugins/fanfiction_panels/plugin.xml
@@ -11,7 +11,7 @@
 	<category>content</category>
 	<copyright>Jimako</copyright>
 	<adminLinks>
-		<link url="admin_config.php" description="" icon="images/icon_32.png" iconSmall="images/icon_16.png" icon128="images/icon_128.png" primary="true" >LAN_CONFIGURE</link>
+		<link url="admin_config.php" description="" icon="images/image.svg" iconSmall="images/image.svg" icon128="images/image.svg" primary="true" >LAN_CONFIGURE</link>
 	</adminLinks>
 	
 </e107Plugin>
