--- a/eplugins/contact/plugin.xml
+++ b/eplugins/contact/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<e107Plugin name="Fanfiction Panels" lan="LAN_001" version="1.0" date="2024-10-10" compatibility="2.3" installRequired="true" >
+<e107Plugin name="Contact" lan="LAN_PLUGIN_CONTACT_NAME" version="2.0" date="2024-10-10" compatibility="2.0" installRequired="true" >
 	<author name="Jimako" url="https://www.e107sk.com" />
-	<summary lan="">eFiction integration software for e107 CMS </summary>
-	<description lan="">eFiction is a software program that enables users to run automated original or fanfiction archives on their websites.</description>
+	<summary lan="">Array</summary>
+	<description lan="">Contact Form Plugin</description>
 	<keywords>
 		<word>information</word>
 		<word>content</word>
@@ -13,5 +13,9 @@
 	<adminLinks>
 		<link url="admin_config.php" description="" icon="images/image.svg" iconSmall="images/image.svg" icon128="images/image.svg" primary="true" >LAN_CONFIGURE</link>
 	</adminLinks>
-	
+	<pluginPrefs>
+		<pref name='contact_info'></pref>
+		<pref name='contact_emailcopy'>0</pref>
+		<pref name='contact_pages'></pref>
+	</pluginPrefs>
 </e107Plugin>
