--- a/eplugins/econtact/plugin.xml
+++ b/eplugins/econtact/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<e107Plugin name="Contact" lan="LAN_PLUGIN_CONTACT_NAME" version="2.0" date="2024-10-10" compatibility="2.0" installRequired="true" >
+<e107Plugin name="Contact" version="1.0" date="2024-10-10" compatibility="2.0" installRequired="true" >
 	<author name="Jimako" url="https://www.e107sk.com" />
 	<summary lan="">Array</summary>
 	<description lan="">Contact Form Plugin</description>
@@ -16,6 +16,7 @@
 	<pluginPrefs>
 		<pref name='contact_info'></pref>
 		<pref name='contact_emailcopy'>0</pref>
-		<pref name='contact_pages'></pref>
+		<pref name='contact_visibility'>253</pref>
+		<pref name='contact_filter'></pref>
 	</pluginPrefs>
 </e107Plugin>
