--- a/eplugins/fanfiction_panels/plugin.xml
+++ b/eplugins/fanfiction_panels/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<e107Plugin name="Fanfiction Panels" lan="LAN_001" version="1.0" date="2024-10-10" compatibility="2.3" installRequired="true" >
+<e107Plugin name="Panels" lan="LAN_001" version="1.0" date="2024-10-10" compatibility="2.3" installRequired="true" >
 	<author name="Jimako" url="https://www.e107sk.com" />
 	<summary lan="">eFiction integration software for e107 CMS </summary>
 	<description lan="">eFiction is a software program that enables users to run automated original or fanfiction archives on their websites.</description>
