--- a/eplugins/fanfiction_settings/plugin.xml
+++ b/eplugins/fanfiction_settings/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<e107Plugin name="eFiction Core" lan="LAN_EFICTION_PLUGIN_NAME" version="1.0" date="2024-10-16" compatibility="2.0" installRequired="true" >
+<e107Plugin name="Settings" lan="LAN_EFICTION_PLUGIN_NAME" version="1.0" date="2024-10-16" compatibility="2.0" installRequired="true" >
 	<author name="Jimako" url="https://www.e107sk.com" />
 	<summary lan="">eFiction is a software program that enables users to run automated original or fanfiction archives on their websites.</summary>
 	<description lan="">eFiction is a software program that enables users to run automated original or fanfiction archives on their websites.</description>
